hw/mail-service/deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mail
  name: mail-app
  labels:
    app: otus-hw
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mail-app
  template:
    metadata:
      labels:
        app: mail-app
    spec:
      containers:
        - name: web-service
          image: khmel19/otus:mail
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
            - name: actuator
              containerPort: 8285
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 10
