hw/mail-service/deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mail
  name: svc-mail-app
  labels:
    app: svc-mail-app
spec:
  selector:
    app: mail-app
  ports:
    - port: 5000
      name: http
      targetPort: http
    - port: 8285
      name: actuator
      targetPort: actuator
